test/rules/single_criterion/share_host_pid/not_allow_share_host_pid/config.json
{
  "description": "Test single criteria rule (deny PID sharing with host)",
  "runKwctl": true,
  "testWorkspace": "../fixtures/",
  "accept": [
    "cronjobs/share_host_network.yaml",
    "cronjobs/share_host_ipc.yaml",
    "deployments/normal.yaml",
    "deployments/share_host_network.yaml",
    "deployments/share_host_ipc.yaml",
    "pods/share_host_network.yaml",
    "pods/share_host_ipc.yaml"
  ],
  "reject": [
    "cronjobs/share_host_pid.yaml",
    "deployments/share_host_pid.yaml",
    "pods/share_host_pid.yaml"
  ]
}
